test/Fail/Issue309a.err
Issue309a.agda:6.18: error: [ParseError]
Malformed syntax declaration: syntax must use unique argument names
